name:           testnet-healthcheck
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/input-output-hk/testnet-healthcheck#readme>
homepage:       https://github.com/input-output-hk/testnet-healthcheck#readme
bug-reports:    https://github.com/input-output-hk/testnet-healthcheck/issues
copyright:      2018 IOHK
license:        MIT
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/testnet-healthcheck

library
  exposed-modules:
      Healthcheck
      Webserver
      Webserver.API
      Webserver.Types
  other-modules:
      Paths_testnet_healthcheck
  hs-source-dirs:
      src
  build-depends:
      aeson
    , base
    , broadcast-chan
    , bytestring
    , data-default-class
    , ekg
    , gitrev
    , http-client
    , http-client-tls
    , lens
    , lens-aeson
    , monad-logger
    , mtl
    , optparse-applicative
    , servant
    , servant-client
    , servant-server
    , servant-websockets
    , stm
    , text
    , time
    , transformers
    , vector
    , wai
    , wai-cors
    , wai-extra
    , warp
    , websockets
  default-language: Haskell2010

executable testnet-healthcheck
  main-is: Main.hs
  other-modules:
      Paths_testnet_healthcheck
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:
      aeson
    , base
    , broadcast-chan
    , data-default-class
    , ekg
    , gitrev
    , lens
    , lens-aeson
    , monad-logger
    , mtl
    , optparse-applicative
    , servant
    , servant-client
    , servant-server
    , servant-websockets
    , testnet-healthcheck
    , text
    , transformers
    , wai
    , wai-cors
    , wai-extra
    , warp
    , websockets
  default-language: Haskell2010

test-suite testnet-healthcheck-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      HealthcheckSpec
      WebserverSpec
      Paths_testnet_healthcheck
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:
      aeson
    , base
    , bytestring
    , hspec
    , hspec-core
    , lens
    , lens-aeson
    , optparse-applicative
    , servant
    , servant-client
    , servant-server
    , servant-websockets
    , testnet-healthcheck
    , text
    , transformers
    , wai
    , wai-cors
    , wai-extra
    , warp
    , websockets
  default-language: Haskell2010
